<resources>
    <string name="app_name">Calorify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_et_invalid">Masukkan email dengan format yang valid</string>
    <string name="pass_et_invalid">Password kurang dari 8 karakter</string>
    <string name="email_empty">Masukkan email</string>
    <string name="password_empty">Masukkan password</string>
    <string name="onboarding_title_1">Gampang digunakan</string>
    <string name="onboarding_desc_1">Hidup sehat menjadi menyenangkan dengan Calorify! Atur kalori harian dengan mudah dan jadilah versi terbaik dirimu!</string>
    <string name="onboarding_title_2">Aman dan Tepercaya</string>
    <string name="onboarding_desc_2">Sahabat terpercaya untuk perjalananmu dalam mengatur kalori harian. Yuk nikmati saran personal yang aman dari Calorify!</string>
    <string name="onboarding_title_3">Pintar dan Terkini</string>
    <string name="onboarding_desc_3">Temukan keajaiban teknologi dengan Calorify! Nikmati pengalaman mengatur kalori yang pintar dengan bantuan kecerdasan artifisial!</string>
    <string name="onboarding_title_4">Selalu Ada Di Dekatmu</string>
    <string name="onboarding_desc_4">Dengan Calorify, pengaturan kalori harian dapat dilakukan kapanpun dan dimanapun. Yuk hidup sehat dengan Calorify!</string>
    <string name="join_now">Bergabung Sekarang</string>
    <string name="desc_onboard_img_1">Gambar untuk Gampang Digunakan</string>
    <string name="desc_onboard_img_2">Gambar untuk Aman dan Tepercaya</string>
    <string name="desc_onboard_img_3">Gambar untuk Pintar dan Terkini</string>
    <string name="desc_onboard_img_4">Gambar untuk Selalu Ada di Dekatmu</string>
    <string name="fill_email">Mohon isi email</string>
    <string name="fill_pass">Mohon isi kata sandi\n</string>
    <string name="fill_confirm_pass">Ketik ulang kata sandi</string>
    <string name="confirm_pass_not_match">Kata sandi tidak sama</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_scan">Riwayat Log</string>
    <string name="menu_history">Scan Kalori</string>
    <string name="menu_profile">Profil</string>
    <string name="asesmen_diri">Asesmen Diri</string>
    <string name="jargon_asesmen">Sebelum berpetualang bersama, Yuk isi informasi asesmen diri kamu terlebih dahulu agar Calorify dapat mengenalmu lebih baik</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="name_et_hint">Masukkan nama lengkap kamu</string>
    <string name="birth_et_hint">Masukkan tanggal lahir kamu</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="weight_et_hint">Masukkan berat badan kamu (kg)</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="height_et_hint">Masukkan tinggi badan kamu (cm)</string>
    <string name="activity_dd_hint">Pilih status yang paling sesuai</string>
    <string name="stressor_ed_hint">Pilih status yang paling sesuai</string>
    <string name="health_dd_hint">Pilih tujuan kesehatanmu</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="name_et_invalid">Mohon isi nama lengkap</string>
    <string name="birth_et_invalid">Mohon isi tanggal lahir</string>
    <string name="weight_et_invalid">Mohon isi berat badan</string>
    <string name="height_et_invalid">Mohon isi tinggi badan</string>
    <string name="dd_height_et_invalid">Mohon isi status aktivitas</string>
    <string name="dd_stressor_et_invalid">Mohon isi status stressor</string>
    <string name="dd_helth_et_invalid">Mohon isi tujuan kesehatan</string>
    <string name="search_log">Cari makanan atau tanggal</string>
    <string name="no_data_img">Ilustrasi tidak ada data</string>
    <string name="data_not_found">Tidak ada data log ditemukan</string>
    <string name="back">Kembali</string>

    <string-array name="data_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="data_title">
        <item>Nasi Goreng</item>
        <item>Mie Goreng</item>
        <item>Chicken Parmesan</item>
        <item>Sate Ayam</item>
        <item>Spaghetti Carbonara</item>
        <item>Nasi Lemak</item>
        <item>Beef Rendang</item>
        <item>Sushi</item>
        <item>Tiramisu</item>
        <item>Tom Yum Goong</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://cdn1-production-images-kly.akamaized.net/KxuztQKl3tnUN0Fw5iAwKsnX_u0=/0x148:1920x1230/640x360/filters:quality(75):strip_icc():format(jpeg)/kly-media-production/medias/3093328/original/069244600_1585909700-fried-2509089_1920.jpg</item>
        <item>https://awsimages.detik.net.id/community/media/visual/2022/05/24/resep-bakmi-goreng-spesial-ala-restoran-chinese-food_43.jpeg?w=1200</item>
        <item>https://assets.bonappetit.com/photos/5ea8f0df16738800085ad5d2/1:1/w_2560%2Cc_limit/Chicken-Parmesean-Recipe-Lede.jpg</item>
        <item>https://kbu-cdn.com/dk/wp-content/uploads/sate-ayam.jpg</item>
        <item>https://www.allrecipes.com/thmb/PsYaA1-R6zBfW5AH8QRnA4t02QU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/11973-spaghetti-carbonara-mfs-043-2b5e74565db24e789aa790adfa87e18d.jpg</item>
        <item>https://i0.wp.com/resepkoki.id/wp-content/uploads/2017/02/Resep-Nasi-lemak.jpg?fit=1920%2C1920;ssl=1</item>
        <item>https://cdn0-production-images-kly.akamaized.net/YHppKTMNcRz87-cP2Wrg5Ye8mFc=/1x112:1000x675/1200x675/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/3245094/original/043061400_1600750232-shutterstock_1786027046.jpg</item>
        <item>https://lh5.googleusercontent.com/5VQaj4zWVnrACbuTcDr1UchSGwvtTAkaVUaF22sGnjpOtXgYtCRqKQ1PT6s754M4Z8bAVx6PFN4UlYBVfTQaDt9w2VkCrz-qt_01XLaMctLay4rOz7Q96LsWAsFNnOEQP2xTs6fy5bL9BShS6RjIWDwntHBqrggpFIu9Wj5C1I-pNoNdw0J4pJnSKWA</item>
        <item>https://img.kurio.network/_dhhCZechQXEv7EwVlw4DmlLT4U=/1200x1200/filters:quality(80)/https://kurio-img.kurioapps.com/20/12/04/a24d67ad-96c8-4fa2-9187-b221e8a06934.jpg</item>
        <item>https://i2.wp.com/seonkyounglongest.com/wp-content/uploads/2021/03/Tom-Yum-07-mini.jpg?fit=1000%2C667;ssl=1</item>
    </string-array>
    <string-array name="data_category">
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
        <item>Makanan</item>
    </string-array>
    <string-array name="data_eat_time">
        <item>Sarapan</item>
        <item>Sarapan</item>
        <item>Makan Siang</item>
        <item>Makan Malam</item>
        <item>Makan Siang</item>
        <item>Makan Siang</item>
        <item>Lain-Lain</item>
        <item>Lain-Lain</item>
        <item>Lain-Lain</item>
        <item>Sarapan</item>
    </string-array>
    <string-array name="data_portion">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>1</item>
    </string-array>
    <string-array name="data_total_calories">
        <item>200</item>
        <item>300</item>
        <item>120</item>
        <item>200</item>
        <item>300</item>
        <item>120</item>
        <item>300</item>
        <item>120</item>
        <item>200</item>
        <item>300</item>
    </string-array>
    <string-array name="data_created_at_date">
        <item>1 Januari 2023</item>
        <item>1 Januari 2023</item>
        <item>1 Januari 2023</item>
        <item>2 Januari 2023</item>
        <item>2 Januari 2023</item>
        <item>3 Januari 2023</item>
        <item>4 Januari 2023</item>
        <item>5 Januari 2023</item>
        <item>5 Januari 2023</item>
        <item>5 Januari 2023</item>
    </string-array>
    <string-array name="data_created_at_time">
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
        <item>12:03</item>
    </string-array>
    <string-array name="status_ativitas">
        <item>Tidak dapat bergerak</item>
        <item>Dapat bergerak tetapi terbatas</item>
        <item>Dapat bergerak bebas</item>
    </string-array>
    <string-array name="status_stressor">
        <item>Tidak ada penyebab stres</item>
        <item>Peradangan saluran cerna, kanker,  bedah efektif, trauma, demam, operasi, cidera kepala ringan</item>
        <item>Sepsis, bedah tulang, luka bakar, penyakit hati</item>
        <item>HIV/Aids, komplikasi, bedah multisistem, TB Paru + komplikasi</item>
        <item>Luka kepala berat</item>
    </string-array>
    <string-array name="tujuan_kesehatan">
        <item>Menurunkan berat badan ekstrim</item>
        <item>Menurunkan berat badan</item>
        <item>Mempertahankan berat badan</item>
        <item>Menaikkan berat badan</item>
        <item>Menaikkan berat badan ekstrim</item>
    </string-array>

    <string name="weight_value">%s kg</string>
    <string name="height_value">%s cm</string>
    <string name="tv_thank_assessment">Terima kasih telah mengisi Asesmen Diri!</string>
    <string name="tv_base_answer">Berdasarkan jawaban yang kamu berikan,</string>
    <string name="tv_weight">Berat Badan</string>
    <string name="tv_height">Tinggi Badan</string>
    <string name="tv_index_bmi">Index BMI</string>
    <string name="tv_tujuan_kesehatan">Tujuan Kesehatan</string>
    <string name="tv_to_achieve">Untuk mencapai tujuan kesehatan yang kamu ingin capai, kami merekomendasikan ini untuk kamu!</string>
    <string name="tv_calorie">Asupan Kalori Harian</string>
    <string name="tv_ads">Atau ikut program berbayar Calorify untuk mendapatkan personalisasi diet dari Ahli Gizi berlisensi untuk mencapai tujuan kamu dengan lebih cepat!</string>
    <string name="text_upgrade_now">Upgrade Sekarang</string>
    <string name="text_beranda">Pergi ke Beranda</string>
    <string name="tv_kal">kal</string>
    <string name="my_photo">Foto User</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="assessment_result_title">Hasil Asesmen Diri</string>
    <string name="tv_assessment_desc">Berdasarkan jawaban yang kamu berikan pada asesmen terakhir,</string>
    <string name="do_assessment">Lakukan Asesmen Diri</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="simpan">Simpan</string>
</resources>